@@ -7,6 +7,7 @@ purple (05/11/05)
 	maps properly
 + Made is so OP_ManaChange can be 0 size. Bards have this a lot.
 + Fix problems with guilds numbered higher than 512
++ Added unknown world data to the unknown log
 
 dophaZ (04/17/05)
 -----------------------
